apps/guacamole/guacd.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: guacamole
spec:
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
      namespace: guacamole
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:1.3.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "0"
              cpu: "0"
          ports:
            - containerPort: 4822
      terminationGracePeriodSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: guacamole
spec:
  selector:
    app: guacd
  ports:
    - port: 4822
