apps/guacamole/postgres.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: guacamole
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
      namespace: guacamole
    spec:
      containers:
        - name: postgres
          image: postgres:12.7-alpine
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "0"
              cpu: "0"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-init-scripts
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-pvc
        - name: postgres-init-scripts
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: guacamole
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
